Fixes to fft scaling routines.  renaming for some DEFs nad variables. mods to configure.in and such for newer Autoconf support. mods to init.c for the above renames/changes.

--- a/Makefile.am
+++ b/Makefile.am
@@ -9,6 +9,8 @@ SUBDIRS = $(subdirs)
 
 DIST_SUBDIRS = $(subdirs)
 
-CLEANFILES += *~ core* -rf .dep*
+DEPDIR = ${subdirs).deps
+
+CLEANFILES = *~ core* -rf .dep*
 
 EXTRA_DIST = configure CREDITS VERSION extace.spec AUTHORS TODO
