Fixed malloc (actually a "free") bug in init.c, related to colormaps. Still need to rewrite colormap code as it stinks! Fixed makefiles so they don't barf on automake 1.6 and higher.  Should solve compile problems for users on newer distributions. Tested with gentoo 1.2. Modifed the fftw lib checks and altered the header files to deal with the rfft vs drfft libraries. (compile option for fftw). Should allow eXtace to compile cleanly on systems using either rfftw or drfftw compiled versions of fftw.

--- a/config.h.in
+++ b/config.h.in
@@ -24,6 +24,9 @@
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
+/* Define if you have the drfftw library (-ldrfftw).  */
+#undef HAVE_LIBDRFFTW
+
 /* Define if you have the efence library (-lefence).  */
 #undef HAVE_LIBEFENCE
 
