Removed ALSA support as ALSA 0.9.x doesn't offer loopback support for eXtace and ALSA 0.5.x is no longer supported or used widely.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -54,7 +54,7 @@ COMMON_FLAGS = @PFLAGS@ @DFLAGS@
 
 CFLAGS += $(COMMON_FLAGS) -Wall 
 	
-CLEANFILES = *~ core* -rf .dep*
+CLEANFILES = *~ core* .deps/* gmon.out nohup.out -r .deps
 
 EXTRA_DIST = extace.desktop README NEWS TODO Colormap-format
 
