--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ AC_INIT(src/main.c)
 
 EXTACE_MAJOR_VERSION=1
 EXTACE_MINOR_VERSION=7
-EXTACE_MICRO_VERSION=5
+EXTACE_MICRO_VERSION=6
 
 EXTACE_VERSION=$EXTACE_MAJOR_VERSION.$EXTACE_MINOR_VERSION.${EXTACE_MICRO_VERSION}
 
@@ -18,8 +18,8 @@ dnl =========================================================================
 
 have_rfftw=no
 have_drfftw=no
-have_alsa_05x=no
-have_alsa_final=no
+dnl have_alsa_05x=no
+dnl have_alsa_final=no
 
 
 
@@ -66,14 +66,15 @@ DFLAGS="$DFLAGS -g -DDEBUG"
 fi
 AC_SUBST(DFLAGS)
 
+dnl ALSA support removed, no longer needed
 dnl ALSA routines Debugging code
-AC_ARG_ENABLE(alsa-debug,
-[  --enable-alsa-debug	  enable ALSA debugging [default=no]],, enable_alsa_debug=no)
+dnl AC_ARG_ENABLE(alsa-debug,
+dnl [  --enable-alsa-debug	  enable ALSA debugging [default=no]],, enable_alsa_debug=no)
 
-if test "$enable_alsa_debug" = yes; then
-DFLAGS="$DFLAGS -g -DALSA_DEBUG"
-fi
-AC_SUBST(DFLAGS)
+dnl if test "$enable_alsa_debug" = yes; then
+dnl DFLAGS="$DFLAGS -g -DALSA_DEBUG"
+dnl fi
+dnl AC_SUBST(DFLAGS)
 
 dnl Thread routines Debugging code
 AC_ARG_ENABLE(thread-debug,
@@ -147,37 +148,38 @@ dnl ===============
 dnl Alsa Specific
 dnl ===============
 
-AC_MSG_CHECKING(for alsa version)
-AC_EGREP_CPP([AP_maGiC_VALUE],
-[
-#include <sys/asoundlib.h>
-#if defined(SND_LIB_MAJOR) && defined(SND_LIB_MINOR)
-#if SND_LIB_MAJOR>0 || (SND_LIB_MAJOR==0 && SND_LIB_MINOR==5)
-AP_maGiC_VALUE
-#endif
-#endif
-],
-have_alsa_05x=yes
-ALSA_LIBS="-lasound"
-AC_DEFINE(HAVE_ALSA_05)
-AC_MSG_RESULT([found 0.5.x]),
-AC_EGREP_CPP([AP_maGiC_VALUE],
-[
-#include <sys/asoundlib.h>
-#if defined(SND_LIB_MAJOR) && defined(SND_LIB_MINOR)
-#if SND_LIB_MAJOR>0 || (SND_LIB_MAJOR==0 && SND_LIB_MINOR>=6)
-AP_maGiC_VALUE
-#endif
-#endif
-],
-have_alsa_final=yes
-ALSA_LIBS=" "
-AC_DEFINE(HAVE_ALSA_09)
-AC_MSG_RESULT([found latest])
-)
-)
-
+dnl AC_MSG_CHECKING(for alsa version)
+dnl AC_EGREP_CPP([AP_maGiC_VALUE],
+dnl [
+dnl #include <sys/asoundlib.h>
+dnl #if defined(SND_LIB_MAJOR) && defined(SND_LIB_MINOR)
+dnl #if SND_LIB_MAJOR>0 || (SND_LIB_MAJOR==0 && SND_LIB_MINOR==5)
+dnl AP_maGiC_VALUE
+dnl #endif
+dnl #endif
+dnl ],
+dnl have_alsa_05x=yes
+dnl ALSA_LIBS="-lasound"
+dnl AC_DEFINE(HAVE_ALSA_05)
+dnl AC_MSG_RESULT([found 0.5.x]),
+dnl AC_EGREP_CPP([AP_maGiC_VALUE],
+dnl [
+dnl #include <sys/asoundlib.h>
+dnl #if defined(SND_LIB_MAJOR) && defined(SND_LIB_MINOR)
+dnl #if SND_LIB_MAJOR>0 || (SND_LIB_MAJOR==0 && SND_LIB_MINOR>=6)
+dnl AP_maGiC_VALUE
+dnl #endif
+dnl #endif
+dnl ],
+dnl have_alsa_final=yes
+dnl ALSA_LIBS=" "
+dnl AC_DEFINE(HAVE_ALSA_09)
+dnl AC_MSG_RESULT([found latest])
+dnl )
+dnl )
+dnl 
 dnl
+
 dnl fftw
 dnl
 PROGRAMS_EXTACE=""
@@ -247,11 +249,12 @@ Configuration:
     Install Path:			${prefix}
     General Debugging:			${enable_debug}
     Thread Debugging:			${enable_thread_debug}
-    ALSA Debugging:			${enable_alsa_debug}
+dnl    ALSA Debugging:			${enable_alsa_debug}
     Buffer Code Debugging:		${enable_buffer_debug}
     Drag 'n Drop Debugging:		${enable_dnd_debug}
     Window Function Debugging:		${enable_window_debug}
     Memory Allocation Debugging:	${enable_malloc_debug}
     Profiling:				${enable_profiling}
-    ALSA 0.5.x capability		${have_alsa_05x}
-    ALSA 0.9.x capability		${have_alsa_final}"
+dnl    ALSA 0.5.x capability		${have_alsa_05x}
+dnl    ALSA 0.9.x capability		${have_alsa_final}
+"
