Fixed some issues with regards to compiling. Added differnece mode to fft so that L-R signals can be viewed and chewed on.  renamed a couple functions so they are more intuitive to me.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -27,7 +27,7 @@ extace_SOURCES = \
 	land3d.c \
 	gc_maker.c \
 	dir.c \
-	getfft.c \
+	audio_processing.c \
 	events.c \
 	configfile.c \
 	buttons.c \
