--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ AC_INIT(src/main.c)
 
 EXTACE_MAJOR_VERSION=1
 EXTACE_MINOR_VERSION=8
-EXTACE_MICRO_VERSION=07
+EXTACE_MICRO_VERSION=08
 
 EXTACE_VERSION=$EXTACE_MAJOR_VERSION.$EXTACE_MINOR_VERSION.${EXTACE_MICRO_VERSION}
 
@@ -183,7 +183,7 @@ dnl
 dnl fftw
 dnl
 PROGRAMS_EXTACE=""
-AC_CHECK_LIB(rfftw, rfftw_one, have_rfftw=yes,,[-lfftw] )
+AC_CHECK_LIB(rfftw, rfftw_one, have_rfftw=yes,,[-lfftw -lm] )
 
 if test "$have_rfftw" = "yes"
 then
@@ -196,7 +196,7 @@ fi
 
 if test "$have_rfftw" = "no" 
 then
-	AC_CHECK_LIB(drfftw, rfftw_one, have_drfftw=yes,,[-ldfftw] )
+	AC_CHECK_LIB(drfftw, rfftw_one, have_drfftw=yes,,[-ldfftw -lm] )
 
 	if test "$have_drfftw" = "yes"
 	then
