--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,9 +3,7 @@ Multimediadir = $(datadir)/gnome/apps/Multimedia
 INCLUDES = @GTK_CFLAGS@ -DGTK_DISABLE_COMPAT_H  -D_MAJOR_=@EXTACE_MAJOR_VERSION@ -D_MINOR_=@EXTACE_MINOR_VERSION@ -D_MICRO_=@EXTACE_MICRO_VERSION@
 
 
-noinst_PROGRAMS = sine sweep
-
-sine_LDADD = -lm
+noinst_PROGRAMS = sweep
 
 sweep_LDADD = -lm
 
