--- a/Makefile.in
+++ b/Makefile.in
@@ -100,7 +100,7 @@ VERSION = @VERSION@
 
 AUTOMAKE_OPTIONS = foreign
 
-subdirs = src 
+subdirs = src include
 
 SUBDIRS = $(subdirs) 
 
@@ -115,9 +115,9 @@ ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 mkinstalldirs = $(SHELL) $(top_srcdir)/mkinstalldirs
 CONFIG_HEADER = config.h
 CONFIG_CLEAN_FILES =  extace.spec VERSION
-DIST_COMMON =  README ./stamp-h.in AUTHORS COPYING ChangeLog INSTALL \
-Makefile.am Makefile.in NEWS TODO VERSION.in acconfig.h acinclude.m4 \
-aclocal.m4 config.guess config.h.in config.sub configure configure.in \
+DIST_COMMON =  README ./stamp-h.in AUTHORS COPYING INSTALL Makefile.am \
+Makefile.in NEWS TODO VERSION.in acconfig.h acinclude.m4 aclocal.m4 \
+config.guess config.h.in config.sub configure configure.in \
 extace.spec.in install-sh ltmain.sh missing mkinstalldirs
 
 
