Applied patch from Brett (bvds) for comedi input support. (basic for now, lots of hardcoded stuff, to be fixed later). He also rewrote most of sound.c to make it run the audio input as a true thread (instead of a gtk_input handler), which improved gui responsivenes..

--- a/config.h.in
+++ b/config.h.in
@@ -1,6 +1,11 @@
 /* config.h.in.  Generated automatically from configure.in by autoheader.  */
 
+/* Define if the ALSA output driver is used */
 #undef HAVE_ESD
+#undef HAVE_COMEDI
+
+/* Define if you have the <comedilib.h> header file.  */
+#undef HAVE_COMEDILIB_H
 
 /* Define if you have the <dlfcn.h> header file.  */
 #undef HAVE_DLFCN_H
