--- a/configure.in
+++ b/configure.in
@@ -3,7 +3,7 @@ AC_INIT(src/main.c)
 
 EXTACE_MAJOR_VERSION=1
 EXTACE_MINOR_VERSION=8
-EXTACE_MICRO_VERSION=15
+EXTACE_MICRO_VERSION=16
 
 EXTACE_VERSION=$EXTACE_MAJOR_VERSION.$EXTACE_MINOR_VERSION.${EXTACE_MICRO_VERSION}
 
@@ -38,6 +38,7 @@ dnl
 dnl Check for esound library
 dnl
 AM_PATH_ESD(0.2.8, AC_DEFINE(HAVE_ESD),echo "You need the esound-devel package!!!";exit 0)
+
 
 dnl Checks for header files.
 dnl AC_HEADER_DIRENT
@@ -180,6 +181,13 @@ dnl )
 dnl 
 dnl
 
+dnl
+dnl Check for COMEDI library
+dnl
+AC_CHECK_LIB(comedi, comedi_open, [AC_DEFINE(HAVE_COMEDI) EXTRA_LIBS="-lcomedi $EXTRA_LIBS"] , ,[-lm]) 
+AC_CHECK_HEADERS(comedilib.h)
+
+
 dnl fftw
 dnl
 PROGRAMS_EXTACE=""
@@ -189,9 +197,7 @@ if test "$have_rfftw" = "yes"
 then
  	AC_CHECK_LIB(rfftw, rfftw_one,, )
 	PROGRAMS_EXTACE=extace
-	EXTRA_LIBS="-lrfftw -lfftw -lm"
-	AC_SUBST(EXTRA_LIBS)
-	
+	EXTRA_LIBS="$EXTRA_LIBS -lrfftw -lfftw"	
 fi
 
 if test "$have_rfftw" = "no" 
@@ -202,9 +208,7 @@ then
 	then
 		AC_CHECK_LIB(drfftw, rfftw_one,, )
 		PROGRAMS_EXTACE=extace
-		EXTRA_LIBS="-ldrfftw -ldfftw -lm"
-		AC_SUBST(EXTRA_LIBS)
-	
+		EXTRA_LIBS="$EXTRA_LIBS -ldrfftw -ldfftw"	
 	fi
 fi
 
@@ -259,3 +263,4 @@ dnl    ALSA Debugging:			${enable_alsa_debug}
 dnl    ALSA 0.5.x capability		${have_alsa_05x}
 dnl    ALSA 0.9.x capability		${have_alsa_final}
 "
+
