Renamed sound.{ch} to input.{ch}.  Found out why threaded view is jittery.. caused by inconsistent amounts of data coming in via ESD.  Also found bug in draw.c (or audio_processing) where the drawing is tracking input 1:1 which it's not supposed to do. Need to rewrite that algorithm....

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -17,12 +17,12 @@ headers = \
 	globals.h \
 	horiz_specgram.h \
 	init.h \
+	input.h \
 	land_3d.h \
 	markers.h \
 	options.h \
 	reducer.h \
 	scope.h \
-	sound.h \
 	spike_3d.h \
 	stars.h \
 	template.h \
