--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -105,7 +105,7 @@ sweep_LDADD = -lm
 
 bin_PROGRAMS = extace
 
-extace_SOURCES =  	Makefile 	logo.xpm 	2d_eq.c 	audio_processing.c 	buttons.c 	color_win.c 	configfile.c 	convolve.c 	dir.c 	draw.c 	events.c 	gc_maker.c 	horiz_specgram.c 	init.c 	land3d.c 	main.c 	markers.c 	options.c 	reducer.c 	scope.c 	sound.c 	spike_3d.c 	stars.c 	vert_specgram.c 	win_func.c
+extace_SOURCES =  	Makefile 	logo.xpm 	2d_eq.c 	audio_processing.c 	buttons.c 	color_win.c 	configfile.c 	convolve.c 	dir.c 	draw.c 	events.c 	gc_maker.c 	horiz_specgram.c 	init.c 	input.c 	land3d.c 	main.c 	markers.c 	options.c 	reducer.c 	scope.c 	spike_3d.c 	stars.c 	vert_specgram.c 	win_func.c
 
 
 extace_LDADD = @EFENCE@ @GTK_LIBS@ @ESD_LIBS@ @EXTRA_LIBS@ @ALSA_LIBS@ -lgdk_imlib 
@@ -136,8 +136,8 @@ extace_OBJECTS =  2d_eq.$(OBJEXT) audio_processing.$(OBJEXT) \
 buttons.$(OBJEXT) color_win.$(OBJEXT) configfile.$(OBJEXT) \
 convolve.$(OBJEXT) dir.$(OBJEXT) draw.$(OBJEXT) events.$(OBJEXT) \
 gc_maker.$(OBJEXT) horiz_specgram.$(OBJEXT) init.$(OBJEXT) \
-land3d.$(OBJEXT) main.$(OBJEXT) markers.$(OBJEXT) options.$(OBJEXT) \
-reducer.$(OBJEXT) scope.$(OBJEXT) sound.$(OBJEXT) spike_3d.$(OBJEXT) \
+input.$(OBJEXT) land3d.$(OBJEXT) main.$(OBJEXT) markers.$(OBJEXT) \
+options.$(OBJEXT) reducer.$(OBJEXT) scope.$(OBJEXT) spike_3d.$(OBJEXT) \
 stars.$(OBJEXT) vert_specgram.$(OBJEXT) win_func.$(OBJEXT)
 extace_DEPENDENCIES = 
 extace_LDFLAGS = 
@@ -161,10 +161,9 @@ GZIP_ENV = --best
 DEP_FILES =  .deps/2d_eq.P .deps/audio_processing.P .deps/buttons.P \
 .deps/color_win.P .deps/configfile.P .deps/convolve.P .deps/dir.P \
 .deps/draw.P .deps/events.P .deps/gc_maker.P .deps/horiz_specgram.P \
-.deps/init.P .deps/land3d.P .deps/main.P .deps/markers.P \
-.deps/options.P .deps/reducer.P .deps/scope.P .deps/sound.P \
-.deps/spike_3d.P .deps/stars.P .deps/sweep.P .deps/vert_specgram.P \
-.deps/win_func.P
+.deps/init.P .deps/input.P .deps/land3d.P .deps/main.P .deps/markers.P \
+.deps/options.P .deps/reducer.P .deps/scope.P .deps/spike_3d.P \
+.deps/stars.P .deps/sweep.P .deps/vert_specgram.P .deps/win_func.P
 SOURCES = $(extace_SOURCES) sweep.c
 OBJECTS = $(extace_OBJECTS) sweep.$(OBJEXT)
 
