Applied another BVDS patch regarding comedit input...

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -22,6 +22,7 @@ extace_SOURCES = \
 	buttons.c \
 	color_win.c \
 	comedi_input.c \
+	comedi_window.c \
 	configfile.c \
 	convolve.c \
 	dir.c \
@@ -31,7 +32,6 @@ extace_SOURCES = \
 	horiz_specgram.c \
 	init.c \
 	input.c \
-	comedi_input.c \
 	input_processing.c \
 	land3d.c \
 	main.c \
